# gtk3-basic-bulk-renamer

./: .gitignore  Cargo.toml  README.md  build.rs  gtk3-basic-bulk-renamer.desktop
.github/workflows/: release.yml  rust.yml
basic-bulk-renamer/: Cargo.toml
basic-bulk-renamer/src/: lib.rs
gtk-basic-bulk-renamer/: Cargo.toml
gtk-basic-bulk-renamer/src/: error.rs  main.rs  observer.rs  utils.rs
gtk-basic-bulk-renamer/src/win/: file_list.rs  mod.rs  window.glade  window.rs
gtk-basic-bulk-renamer/src/win/provider/: change_case_renamer.glade  change_case_renamer.rs  date_time_renamer.glade  date_time_renamer.rs  insert_overwrite_renamer.glade  mod.rs  replace_renamer.glade  replace_renamer.rs
src/: bulk_renamer.rs  error.rs  main.rs  utils.rs
src/basic_bulk_renamer/: mod.rs
src/utils/: datetime.rs  insert_position.rs  mod.rs  observer.rs
src/win/: file_list.rs  mod.rs  resource.gresource.xml  resource.rs  window.glade  window.rs
src/win/provider/: change_case_renamer.glade  change_case_renamer.rs  date_time_renamer.glade  date_time_renamer.rs  insert_overwrite_renamer.glade  insert_overwrite_renamer.rs  mod.rs  remove_characters.glade  remove_characters.rs  replace_renamer.rs
