[package]
name = "gtk-basic-bulk-renamer"
version = "0.1.0"
description = "Simple Bulk Renamer on GTK+"
authors = ["@cat_in_136"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic-bulk-renamer = { path = "../basic-bulk-renamer" }
gio= "0.9.0"
glib="0.10.1"
gdk="0.13.2"
strum = "0.19"
strum_macros = "0.19"
regex = "1.3.9"
libc-strftime = "0.2.0"

[dependencies.gtk]
version = "0.9.1"
features = ["v3_16"]

[dev-dependencies]
gtk-test = "0.6.1"
lazy_static = "*"
